--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-django==1.10
 django-polymorphic==1.1
-pyyaml==3.12
+django==1.10
+djangorestframework==3.6.3
 Jinja2==2.9.6
-djangorestframework
+pyyaml==3.12
