--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ django-polymorphic==1.1
 django==1.10
 djangorestframework==3.6.3
 Jinja2==2.9.6
+psycopg2==2.7.1
 pyyaml==3.12
+testing.postgresql==1.3.0
